--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "lc-error-definition": "^1.0.1",
     "lc-vue-auto-height-wrapper": "^1.1.14",
     "lc-vue-auto-pagination": "^1.0.11",
-    "lc-vue-biz-select": "^1.0.12",
+    "lc-vue-biz-select": "^1.1.8",
     "lc-vue-form-filter": "^1.1.2",
     "lodash": "^4.17.21",
     "moment": "^2.24.0",
@@ -37,6 +37,7 @@
     "normalize.css": "^8.0.1",
     "qs": "^6.9.1",
     "rxjs": "^7.8.0",
+    "simple-async-debounce": "^1.0.1",
     "simple-deferred2": "^1.0.4",
     "socket.io-client": "^4.6.1",
     "uuid": "^9.0.0",
