--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "lc-vue-form-filter": "^1.1.2",
     "lc-vue-pro-layout": "^1.1.6",
     "lodash": "^4.17.21",
+    "marked": "^12.0.2",
     "moment": "^2.24.0",
     "monaco-editor": "^0.36.1",
     "normalize.css": "^8.0.1",
