--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@vueuse/core": "^9.13.0",
     "ajv": "^8.12.0",
     "axios": "^1.3.2",
+    "buffer": "^6.0.3",
     "change-case": "^4.1.2",
     "ckeditor5": "^37.0.1",
     "crypto-js": "^4.1.1",
@@ -37,6 +38,7 @@
     "lc-vue-text-tip": "^1.2.1",
     "lodash": "^4.17.21",
     "marked": "^12.0.2",
+    "mime": "^4.0.6",
     "moment": "^2.24.0",
     "monaco-editor": "^0.36.1",
     "normalize.css": "^8.0.1",
