--- a/package.json
+++ b/package.json
@@ -20,13 +20,16 @@
     "@hey-api/client-axios": "^0.3.4",
     "@imengyu/vue3-context-menu": "^1.2.5",
     "@vueuse/core": "^9.13.0",
+    "ag-grid-community": "^33.0.3",
+    "ag-grid-vue3": "^32.1.0",
     "ajv": "^8.12.0",
     "axios": "^1.3.2",
     "buffer": "^6.0.3",
     "change-case": "^4.1.2",
     "ckeditor5": "^37.0.1",
     "crypto-js": "^4.1.1",
-    "element-plus": "^2.7.1",
+    "element-plus": "^2.9.1",
+    "exceljs": "^4.4.0",
     "file-saver": "^2.0.5",
     "json-bigint": "^1.0.0",
     "lc-error-definition": "^1.0.1",
