--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "@hey-api/client-axios": "^0.3.4",
     "@imengyu/vue3-context-menu": "^1.2.5",
     "@vueuse/core": "^9.13.0",
-    "ag-grid-community": "^33.0.3",
-    "ag-grid-vue3": "^32.1.0",
+    "ag-grid-enterprise": "^33.0.3",
+    "ag-grid-vue3": "^33.0.3",
     "ajv": "^8.12.0",
     "axios": "^1.3.2",
     "buffer": "^6.0.3",
