--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "generate": "openapi-ts"
   },
   "dependencies": {
+    "@antv/g2": "^5.2.11",
     "@ckeditor/ckeditor5-build-classic": "^37.0.0",
     "@ckeditor/ckeditor5-build-decoupled-document": "^37.0.0",
     "@ckeditor/ckeditor5-theme-lark": "^37.0.0",
@@ -28,7 +29,7 @@
     "change-case": "^4.1.2",
     "ckeditor5": "^37.0.1",
     "crypto-js": "^4.1.1",
-    "element-plus": "^2.9.1",
+    "element-plus": "^2.9.5",
     "exceljs": "^4.4.0",
     "file-saver": "^2.0.5",
     "json-bigint": "^1.0.0",
